--- a/package.json
+++ b/package.json
@@ -9,20 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "js-cookie": "^3.0.1",
     "next": "12.1.6",
+    "nextjs-progressbar": "^0.0.14",
+    "node-sass": "^7.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-query": "^3.39.1",
+    "react-redux": "^8.0.2",
+    "react-redux-toastr": "^7.6.8",
     "sass": "^1.53.0"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/react-redux-toastr": "^7.6.2",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
